<resources>
    <string name="app_name">TaskMaster</string>

    <!-- Login (am_) -->
    <string name="am_titulo">TaskMaster</string>
    <string name="am_logo">Logo de TaskMaster</string>
    <string name="am_etusuario">Usuario</string>
    <string name="am_etpassword">Contraseña</string>
    <string name="am_btnlogin">Iniciar sesión</string>
    <string name="am_btnregistro">Registrarse</string>

    <!-- Registro (ar_) -->
    <string name="ar_titulo">Crear cuenta</string>
    <string name="ar_tvusuario">Usuario:</string>
    <string name="ar_tvnombre">Nombre:</string>
    <string name="ar_tvemail">Email:</string>
    <string name="ar_lblpassword">Contraseña:</string>
    <string name="ar_etusuario">Ej: atorres</string>
    <string name="ar_etnombre">Ej: Ana Torres</string>
    <string name="ar_etemail">Ej: ana@correo.cl</string>
    <string name="ar_etpassword">Mínimo 4 caracteres</string>
    <string name="ar_cbterminos">Acepto los términos y condiciones</string>
    <string name="ar_btnregistrar">Registrar</string>

    <!-- Bienvenido (ab_) -->
    <string name="ab_logo">Logo de TaskMaster</string>
    <string name="ab_bienvenida">¡Bienvenido!</string>
    <string name="ab_subtitulo">Organiza tus tareas diarias</string>
    <string name="ab_btncontinuar">Continuar a mis tareas</string>

    <!-- Tareas (at_) -->
    <string name="at_titulo">Mis tareas</string>
    <string name="at_ettarea">Nueva tarea</string>
    <string name="at_btnagregar">Agregar tarea</string>
    <string name="at_progreso">Completadas: 0/0 (0%)</string>
    <string name="at_iconodesc">Icono de tarea</string><string name="at_btncerrarsesion">Cerrar sesión</string>
    <string name="at_filtro_todas">Todas</string>
    <string name="at_filtro_pendientes">Pendientes</string>
    <string name="at_filtro_completadas">Completadas</string>
    <string name="at_prioridad">Prioridad</string>

</resources>