<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TasksActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTitulo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/at_titulo"
                android:textSize="22sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnCerrarSesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/at_btncerrarsesion" />

        </LinearLayout>

        <!-- Formulario para crear una tarea -->
        <EditText
            android:id="@+id/etTarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/at_ettarea"
            android:inputType="text"
            android:minHeight="48dp" />

        <Spinner
            android:id="@+id/spCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/at_ettarea"
            android:inputType="text"
            android:minHeight="68dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_hight="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/at_prioridad"/>

            <RatingBar
                android:id="@+id/rbPrioridad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:numStars="5"
                android:rating="3"
                android:stepSize="1" />
        </LinearLayout>

        <Button
            android:id="@+id/btnAgregar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/at_btnagregar" />

        <!-- Progreso de tareas completadas -->
        <TextView
            android:id="@+id/tvProgreso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/at_progreso" />

        <ProgressBar
            android:id="@+id/pbProgreso"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100" />


        <!-- Filtro de la lista -->
        <RadioGroup
            android:id="@+id/rgFiltro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbTodas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/at_filtro_todas" />

            <RadioButton
                android:id="@+id/rbPendientes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/at_filtro_pendientes" />

            <RadioButton
                android:id="@+id/rbCompletadas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/at_filtro_completadas" />

        </RadioGroup>

        <!-- Lista de tareas -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTareas"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>