<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/am_logo"
            android:src="@drawable/task_master_logo" />

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/am_titulo"
            android:textColor="@color/login_text"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:backgroundTint="@color/login_hint"
            android:hint="@string/am_etusuario"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/login_text"
            android:textColorHint="@color/login_hint" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="password"
            android:backgroundTint="@color/login_hint"
            android:hint="@string/am_etpassword"
            android:inputType="textPassword"
            android:textColor="@color/login_text"
            android:textColorHint="@color/login_hint"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/login_accent"
            android:text="@string/am_btnlogin" />

        <Button
            android:id="@+id/btnIrRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/login_accent"
            android:text="@string/am_btnregistro" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>